--- a/code/bean.yml
+++ b/code/bean.yml
@@ -21,6 +21,8 @@ Event:
   courts_Court_List:  List<Court>,场地
 
 
+
+
 TennisUser:
   id:  long,
   account:  String,帐户
@@ -34,6 +36,33 @@ TennisUser:
   state:  BaseEnum,登陆状态 0 在线 1 不在线 2 黑名单
   integral:  String,积分
   accountLevel:  String,等级
+
+TennisUserDetail:
+  id:  long,
+  account:  String,帐户
+  name:  String,姓名
+  password:  String,密码
+  roles:  String,角色
+  registerDate:  Date,注册时间
+  age:  int,年龄
+  address:  String,地址
+  birthday:  String,生日 用时间戳？（简单的使用格式化的日期字符串也可以）
+  genderModel:  BaseEnum,性别 0代表男士 1代表女士
+  phote:  String,头像
+  phone:  String,联系电话
+  email:  String,邮箱
+  tennisAge:  int,球龄
+  tennisLevel:  int,水平 1.0 1.5 2.0 2.5 3.0 3.5 4.0 4.5 5.0 5.5
+  personalInfo:  int,个人说明
+  loginTimes:  int,登陆次数
+  lastLoginDate:  String,最后登陆时间
+  deviceFlag:  String,设备标识
+  stateModel:  BaseEnum,登陆状态 0 在线 1 不在线 2 黑名单
+  integral:  String,积分
+  accountLevel:  String,等级
+  friends_Evaluate_List:  List<Evaluate>,好友印象
+  image_Image_List:  List<ImageFile>,照片
+
 
 ImageFile:
   id:  long,
