--- a/code/bean.yml
+++ b/code/bean.yml
@@ -12,8 +12,8 @@ Event:
   latitude:  double,纬度
   remark:  String,备注
   weight:  int,权重
-  category:  BaseEnum,分类
-  statues:  BaseEnum,状态：2审核中，1未完成，0已完成
+  category_BaseEnum_Model:  BaseEnum,分类
+  statues_BaseEnum_Model:  BaseEnum,状态：2审核中，1未完成，0已完成
   startUsers_TennisUser_List:  List<TennisUser>,收藏
   owners_TennisUser_List:  List<TennisUser>, // 发起者
   participant_TennisUser_List:  List<TennisUser>, // 参与者
@@ -30,12 +30,12 @@ TennisUser:
   roles:  String,角色
   registerDate:  Date,注册时间
   address:  String,地址
-  gender:  BaseEnum,性别 0代表男士 1代表女士
   phote:  String,头像
   phone:  String,联系电话
-  state:  BaseEnum,登陆状态 0 在线 1 不在线 2 黑名单
   integral:  String,积分
   accountLevel:  String,等级
+  state_BaseEnum_Model:  BaseEnum,登陆状态 0 在线 1 不在线 2 黑名单
+  gender_BaseEnum_Model:  BaseEnum,性别 0代表男士 1代表女士
 
 TennisUserDetail:
   id:  long,
@@ -47,7 +47,6 @@ TennisUserDetail:
   age:  int,年龄
   address:  String,地址
   birthday:  String,生日 用时间戳？（简单的使用格式化的日期字符串也可以）
-  genderModel:  BaseEnum,性别 0代表男士 1代表女士
   phote:  String,头像
   phone:  String,联系电话
   email:  String,邮箱
@@ -57,9 +56,10 @@ TennisUserDetail:
   loginTimes:  int,登陆次数
   lastLoginDate:  String,最后登陆时间
   deviceFlag:  String,设备标识
-  stateModel:  BaseEnum,登陆状态 0 在线 1 不在线 2 黑名单
   integral:  String,积分
   accountLevel:  String,等级
+  gender_BaseEnum_Model:  BaseEnum,性别 0代表男士 1代表女士
+  state_BaseEnum_Model:  BaseEnum,登陆状态 0 在线 1 不在线 2 黑名单
   friends_Evaluate_List:  List<Evaluate>,好友印象
   image_Image_List:  List<ImageFile>,照片
 
@@ -74,7 +74,7 @@ Evaluate:
   id:  long,
   evaluate:  String,评价
   score:  double,评分
-  category:  BaseEnum,评论分类
+  category_BaseEnum_Model:  BaseEnum,评论分类
 
 
 Court:
@@ -89,8 +89,8 @@ Court:
   weights:  String,权重
   longitude:  double,经度
   latitude:  double,纬度
-  city:  BaseCity,城市id
-  district:  BaseCity,区县id
+  city_BaseCity_Model:  BaseCity,城市id
+  district_BaseCity_Model:  BaseCity,区县id
 
 BaseEnum:
   id:  long,
