fix the template of iOS jsonbean

--- a/code/bean.yml
+++ b/code/bean.yml
@@ -79,6 +79,7 @@ Evaluate:
 
 Court:
   id:  long,
+  title:  String,场地名称 
   address:  String,场地地址
   phone:  String,联系电话
   startTime:  String,开始时间
